Fixed home screen on narrow screens.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,5 @@
-html.home code {
-	font-size: 140%;
+@media only screen and (min-width: 721px) {
+	html.home code {
+		font-size: 140%;
+	}
 }
